# lab

./: README.md
01-setup-replication-postgres/: README.md  docker-compose.yml
02-nestjs-replication/: README.md  benchmark.sh  benchmark_log.csv  docker-compose.yml
02-nestjs-replication/app/: .gitignore  Dockerfile  package-lock.json  package.json
03-buffalo-async-replication/: .buffalo.dev.yml  Dockerfile  database.yml  docker-compose.yml  entrypoint.sh  go.mod
03-buffalo-async-replication/actions/: app.go  messages.go  messages_test.go  render.go
03-buffalo-async-replication/config/: buffalo-app.toml
04-coolify/: README.md
07-robust-code-golang/: .flyenv
08-cv-car-counter/: CarDetection.ipynb  README.md
09-kedro-pilot-cv/kedro-pilot-cv/: README.md  pyproject.toml  requirements.txt
09-kedro-pilot-cv/kedro-pilot-cv/conf/base/: parameters.yml
09-kedro-pilot-cv/kedro-pilot-cv/src/kedro_pilot_cv/: __init__.py  __main__.py  pipeline_registry.py  settings.py
09-kedro-pilot-cv/kedro-pilot-cv/src/kedro_pilot_cv/pipelines/detect/: nodes.py  pipeline.py
10-op-detector/op-detector/: README.md  pyproject.toml  requirements.txt
10-op-detector/op-detector/conf/: README.md
10-op-detector/op-detector/conf/base/: catalog.yml  parameters_data_engineering.yml  parameters_detect.yml  parameters_train.yml
10-op-detector/op-detector/src/op_detector/: __init__.py  __main__.py  settings.py
10-op-detector/op-detector/src/op_detector/pipelines/data_engineering/: __init__.py  nodes.py  pipeline.py
10-op-detector/op-detector/src/op_detector/pipelines/detect/: nodes.py  pipeline.py
10-op-detector/op-detector/src/op_detector/pipelines/train/: __init__.py  nodes.py  pipeline.py
10-op-detector/op-detector/tests/pipelines/data_engineering/: test_pipeline.py
11-kedro-anti-fatigue/anti-fatigue/: README.md  pyproject.toml  requirements.txt
11-kedro-anti-fatigue/anti-fatigue/conf/base/: parameters_detect.yml  parameters_scraping.yml  parameters_train.yml
11-kedro-anti-fatigue/anti-fatigue/src/anti_fatigue/: __init__.py  __main__.py  pipeline_registry.py  settings.py
11-kedro-anti-fatigue/anti-fatigue/src/anti_fatigue/pipelines/detect/: __init__.py  nodes.py  pipeline.py
11-kedro-anti-fatigue/anti-fatigue/src/anti_fatigue/pipelines/scraping/: __init__.py  nodes.py  pipeline.py
11-kedro-anti-fatigue/anti-fatigue/src/anti_fatigue/pipelines/train/: nodes.py  pipeline.py
11-kedro-anti-fatigue/anti-fatigue/tests/pipelines/detect/: test_pipeline.py
11-kedro-anti-fatigue/anti-fatigue/tests/pipelines/scraping/: test_pipeline.py
11-kedro-anti-fatigue/anti-fatigue/tests/pipelines/train/: test_pipeline.py
14-springboot-kafka/: README.md  kafka-mac.sh
(+92 files in other folders)
